overflow fix

--- a/src/pages/styles/global.css
+++ b/src/pages/styles/global.css
@@ -7,8 +7,6 @@
     font-style: normal;
 }
 
-
-
 @media (min-width:575px)  { 
     body {overflow: hidden ;}
     .logo, .slatt  {
@@ -39,7 +37,8 @@
 } 
 
 body {
-    overflow-x: hidden ;
+    overflow-x: hidden !important;
+    max-width: 100%;
 }
 
 .face-imgs {
